improvements, ldr added brush and vacuum as service

--- a/neato_node/CMakeLists.txt
+++ b/neato_node/CMakeLists.txt
@@ -1,7 +1,23 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(neato_node)
 
-find_package(catkin REQUIRED)
+find_package(catkin REQUIRED COMPONENTS
+  rospy
+  std_msgs
+  message_generation
+)
+
+add_service_files(
+  FILES
+  SetVacuum.srv
+  SetBrush.srv
+)
+
+generate_messages(
+  DEPENDENCIES
+  std_msgs
+)
+
 catkin_package(DEPENDS)
 
 install(DIRECTORY launch
