--- a/neato_node/package.xml
+++ b/neato_node/package.xml
@@ -8,9 +8,11 @@
   <maintainer email="ferguson@cs.albany.edu">Michael Ferguson</maintainer>
   <license>BSD</license>
   <url>http://ros.org/wiki/neato_node</url>
-  
-  <buildtool_depend>catkin</buildtool_depend>
 
+  <buildtool_depend>catkin</buildtool_depend>
+  <build_depend>message_generation</build_depend>
+
+  <run_depend>message_runtime</run_depend>
   <run_depend>neato_driver</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>sensor_msgs</run_depend>
